# engineer-agent

./: README.md  pyproject.toml
agent/: ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  config.yaml.example  start.bat  start.sh
agent/app/: __init__.py  main.py
agent/app/api/endpoints/: __init__.py  auth.py  files.py  query.py
agent/app/core/: config.py
agent/app/db/: __init__.py
agent/app/models/: user.py
agent/app/services/: auth_service.py  document_service.py  file_service.py
agent/backend/api/endpoints/: query.py
agent/backend/core/: config.py  security.py
agent/backend/db/: __init__.py  vector_store.py
agent/backend/models/: schemas.py
agent/backend/services/: report_service.py
agent/backend/tasks/: worker.py
agent/data/: .gitkeep
agent/frontend-web/: .env.development  .env.production  .gitignore  PROJECT_SUMMARY.md  package.json
agent/frontend-web/src/: App.vue
backend/: .env.example  .gitignore  CHECKLIST.md  FILE_MANIFEST.md  FINAL_SUMMARY.md  docker-compose.yml  init_db.py  requirements.txt  test_api.py  test_db.py  test_yaml_config.py
backend/app/core/: yaml_config.py
backend/app/db/: base.py
backend/app/models/: schemas.py
backend/app/services/: rag_service.py
backend/app/tasks/: document_tasks.py
backend/backend/: main.py
backend/backend/services/: document_service.py
backend/backend/tasks/: __init__.py
backend/frontend-web/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  vite.config.ts
backend/frontend-web/src/: main.ts
(+29 files in other folders)
