[project]
name = "c:\\users\\20100\\appdata\\roaming\\python\\scripts\\poetry add `cat requirements-txt`"
version = "0.1.0"
description = ""
authors = [
    {name = "LXF-L",email = "2010086609@qq.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "c:\\"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
